# hack-the-cart

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
configs/: config.yaml
src/app/: gunicorn_config.py  main.py
src/app/data/: item_to_idx.json  weights.npy
src/first_level/: fit.py
src/first_level/models/: __init__.py  als.py  core.py  ease.py  multvae.py  sar.py  slim.py  utils.py
src/first_level/models/nn/: __init__.py  activation.py  feedforward.py
src/metrics/: __init__.py  core.py  ndcg.py  recall.py  utils.py
src/second_level/: ease-0361.ipynb  second_level.ipynb
